# SQL-to-Code

./: .gitignore  .gitmodules  ABOUT.txt  README.md
.run/: Build and run - ddl2code - Hello.run.xml  Build and run - ddl2code - Help.run.xml  Build and run - ddl2code - Input DDL.run.xml  Build and run - ddl2code - Input.run.xml  Build and run - ddl2code - Version.run.xml  Build and run - sql2code - Hello.run.xml  Build and run - sql2code - Help.run.xml  Build and run - sql2code - Input - Log full - Debug.run.xml  Build and run - sql2code - Input - Log full.run.xml  Build and run - sql2code - Input DDL.run.xml  Build and run - sql2code - Input.run.xml  Build and run - sql2code - Multiple inputs - Log full.run.xml  Build and run - sql2code - Version.run.xml  sql2code-1.0.0.run.xml  update_software_toolkit.sh.run.xml
Application/: CMakeLists.txt  Constants.h  IProcessor.cpp  IProcessor.h  RawDataProcessor.cpp  RawDataProcessor.h  RawDataProcessorRecipe.cpp  RawDataProcessorRecipe.h  StringDataProcessor.cpp  StringDataProcessor.h  Target.h  Utils.cpp  Utils.h  main.cpp
Application/generator/: CodeGenerator.cpp  CodeGenerator.h  IGenerator.cpp  IGenerator.h  IIngredient.cpp  IIngredient.h  IRecipe.cpp  IRecipe.h  Ingredients.cpp  Ingredients.h
Application/generator/implementation/: ClassNameIngredient.cpp  ClassNameIngredient.h  ClassPropertyDataType.cpp  ClassPropertyDataType.h  ClassPropertyIngredient.cpp  ClassPropertyIngredient.h  IngredientType.cpp  IngredientType.h
Application/generator/implementation/cpp/: CppHeaderFileRecipe.cpp  CppHeaderFileRecipe.h  CppRecipeCommons.cpp  CppRecipeCommons.h  CppSourceFileRecipe.cpp  CppSourceFileRecipe.h
Application/processor/: StringDataProcessor.cpp  StringDataProcessor.h  StringDataProcessorRecipe.cpp  StringDataProcessorRecipe.h
Assets/: dummy.ddl  example.ddl  example.sql  main.2.sql  main.sql
Dependencies/: Argparse.sh  Ddlparser.sh  SQLParse.sh
Recipes/: prepare.sh
Run/: sql2code_Build_and_Run_Input_Log_Full.sh  sql2code_Build_and_Run_Input_Log_Full_Chats.sh  sql2code_Build_and_Run_Input_Log_Full_Documents.sh  (+6 more)
Upstreams/: GitFlic.sh  (+1 more)
(+12 files in other folders)
